Removed debug item

--- a/src/components/compose/compose.html
+++ b/src/components/compose/compose.html
@@ -1,10 +1,10 @@
 <div style="margin: 20px;">
   <v-card>
-    <v-card-title>Your docker-compose.yml file is ready.</v-card-title>
+    <v-card-title>Your docker-compose.yml file is ready to be build.</v-card-title>
 
     <v-card-actions>
       <v-btn color="primary" @click.stop="createDockerComposeFile()" dark>
-        <v-icon dark>edit</v-icon>Edit
+        <v-icon dark>build</v-icon>Build
       </v-btn>
     </v-card-actions>
   </v-card>
@@ -12,18 +12,21 @@
   <v-dialog v-model="dialog">
     <v-card>
       <v-card-title>
-        <span>Docker-compose result</span>
-        <!-- <v-spacer></v-spacer>
+        <span>Docker-compose file</span>
+        <v-spacer></v-spacer>
         <v-menu bottom left>
           <v-btn icon slot="activator">
             <v-icon>more_vert</v-icon>
           </v-btn>
           <v-list>
-            <v-list-tile v-for="(item, i) in items" :key="i" @click="">
-              <v-list-tile-title>{{ item.title }}</v-list-tile-title>
+            <v-list-tile>
+              <v-btn flat v-bind:href="url" download="docker-compose.yml">Download</v-btn>
             </v-list-tile>
+            <!-- <v-list-tile v-for="(item, i) in items" :key="i" @click="">
+              <v-list-tile-title>{{ item.title }}</v-list-tile-title>
+            </v-list-tile> -->
           </v-list>
-        </v-menu> -->
+        </v-menu>
       </v-card-title>
       <v-card-text>
         <h3>Update your etc/hosts file</h3>
@@ -32,7 +35,8 @@
           label="docker-compose.yml"
           id="yaml"
           :multi-line="true"
-          :auto-grow="true"
+          :readonly="true"
+          rows="20"
           v-model="yaml"
         ></v-text-field>
       </v-card-text>
