Main color is orange #FDB836

--- a/src/components/compose/compose.html
+++ b/src/components/compose/compose.html
@@ -3,8 +3,8 @@
     <v-card-title>Your docker-compose.yml file is ready to be build.</v-card-title>
 
     <v-card-actions>
-      <v-btn color="primary" @click.stop="createDockerComposeFile()" dark>
-        <v-icon dark>build</v-icon>Build
+      <v-btn color="primary" @click.stop="createDockerComposeFile()">
+        <v-icon>build</v-icon>Build
       </v-btn>
     </v-card-actions>
   </v-card>
