--- a/src/components/overview/overview.html
+++ b/src/components/overview/overview.html
@@ -5,7 +5,7 @@
         <v-container fluid grid-list-lg>
           <v-layout row align-left>
             <v-flex xs4>
-              <v-card-media :src="item.logo" height="100px" contain align="left"></v-card-media>
+              <v-img :src="item.logo" height="100px" contain align="left"></v-img>
             </v-flex>
             <v-flex xs9>
               <div>
